@@ -156,6 +156,8 @@ tasks.register("msiPackage") {
     group = "potoflux"
     description = "build as msi installer"
 
+    mkdir("$buildDir/libs/output")
+
     doLast {
         exec {
             commandLine "jpackage",
@@ -179,6 +181,36 @@ tasks.register("msiPackage") {
             "--app-version", "$version",
             "--icon", "$buildDir/libs/main.ico",
             "--win-upgrade-uuid", "5536eb5f-55c0-408d-b034-677536a3a078"
+        }
+    }
+}
+tasks.register("rpmPackage") {
+    dependsOn("build", "copyLibs", "copyJar", "copyJfx")
+
+    group = "potoflux"
+    description = "build as msi installer"
+
+    mkdir("$buildDir/libs/output")
+
+    doLast {
+        exec {
+            commandLine "jpackage",
+            "--input", "$buildDir/libs/build",
+            "--name", "PotoFlux",
+            "--main-jar", "PotoFlux-$version" + ".jar",
+            "--main-class", "net.minheur.potoflux.PotoFlux",
+
+            "--type", "rpm",
+            "--dest", "$buildDir/libs/output",
+
+            "--runtime-image", "${System.getProperty('java.home')}",
+
+            "--java-options", "--module-path=\$APPDIR/lib --add-modules=javafx.controls,javafx.graphics -Xmx512m",
+
+            "--install-dir", "/opt/TechnoMastery/PotoFlux",
+
+            "--app-version", "$version",
+            "--icon", "$buildDir/libs/main.png"
         }
     }
 }
